Switched from Legacy to MiniMessage formatting and more de-deprecating